public class CConstants {
    public static int ballDiameter = 20;

    public static int potDiameter = 50;

    public static int tableWidth = 800;
    public static int tableHeight = tableWidth / 2;

    public static int widthOffset = 100;
    public static int heightOffset = 100;

    static public int getRadius() {
        return ballDiameter / 2;
    }
}
